[package]
name = "rustlet"
version = "1.0.0"
authors = ["Mehdi JrGr"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version ="0.12", features = ["blocking"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"